# DynamicKnowledgeGraphs

./: .gitignore  .llm_config.json.example  .llm_config_gemini.json.example  CMakeLists.txt  CONFIG_FILE_CHANGES.md  CONFIG_GUIDE.md  DESIGN.md  GEMINI_SETUP.md  HISTORICAL_EXAMPLE.md  HYPERGRAPH_IMPLEMENTATION.md  PATH_FIX_SUMMARY.md  PDF_PROCESSING.md  PIPELINE.md  PROJECT_STATUS.md  README.md  TEST_DATA.md  build.sh
References/: Hypergraph.cpp
examples/: historical_knowledge_example.cpp  hypergraph_example.cpp  json_to_html.cpp  llm_extraction_example.cpp  pdf_processing_example.cpp  pipeline_example.cpp
include/cli/: cli.hpp
include/discovery/: discovery_engine.hpp  insight.hpp  report_generator.hpp
include/graph/: hypergraph.hpp
include/index/: hypergraph_index.hpp
include/llm/: llm_provider.hpp
include/pdf/: pdf_processor.hpp
include/pipeline/: extraction_pipeline.hpp
include/render/: augmentation_renderer.hpp
src/: main.cpp
src/discovery/: discovery_engine.cpp  report_generator.cpp
src/graph/: hypergraph.cpp  hypergraph_extended.cpp
src/llm/: llm_provider.cpp
src/pdf/: pdf_processor.cpp
src/pipeline/: extraction_pipeline.cpp
src/render/: augmentation_renderer.cpp
tests/: graph.html  report.html
tests/unit/: test_hypergraph.cpp
